--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -343,6 +343,11 @@ main {
                     #additional_options{
                         margin: 3px 0px;
                         width: 100%;
+
+                        border-style: solid;
+                        border-top: 4px;
+                        border-color: var(--primary-color);
+
                         font-family: var(--tertiary-font);
                         font-size: 15px;
                         ul {
