--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -345,7 +345,7 @@ main {
                         width: 100%;
 
                         border-style: solid;
-                        border-top: 4px;
+                        border: 4px 0px 0px 0px;
                         border-color: var(--primary-color);
 
                         font-family: var(--tertiary-font);
