--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -341,7 +341,8 @@ main {
                         }
                     }
                     #additional_options{
-                        margin: 3px 0px;
+                        margin: 0px;
+                        padding: 3px 0px;
                         width: 100%;
 
                         border-style: solid;
