--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -295,19 +295,21 @@ main {
             .widget_header {
                 background-color: var(--primary-color);
 
-                .widget_title{
+                .widget_title {
                     margin: 0px;
                     padding: 15px;
 
                     font-family: var(--primary-font);
                     font-weight: bold;
                     color: #FFFFFF;
-                    &h3 {
-                        font-size: 21px;
-                    }
-                    &h4 {
-                        padding-left: 12px;
-                    }
+                }
+                h3.widget_title {
+                    font-size: 21px;
+                }
+                h4.widget_title {
+                    padding: 12px;
+                    padding-left: 10px;
+                    font-size: 17px;
                 }
             }
             &#search-box {
@@ -349,7 +351,7 @@ main {
                     #additional_options{
                         margin: 0px;
                         width: 100%;
-                        
+
                         font-family: var(--tertiary-font);
                         font-size: 15px;
                         ul {
