--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -310,6 +310,7 @@ main {
                     padding: 12px;
                     padding-left: 10px;
                     font-size: 17px;
+                    font-weight: normal;
                 }
             }
             &#search-box {
