--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -146,6 +146,7 @@ main {
         float: left;
         &.container {
             padding-left: 0;
+            padding-right: 30px;
         }
         @media screen and (max-width: 980px) {
             width: 100%;
@@ -153,6 +154,19 @@ main {
         }
         &.wide {
             width: 85%;
+        }
+
+        nav#post_meta {
+            font-family: var(--primary-font);
+            color: var(--quaternary-color);
+            font-size: 11px;
+            a {
+                text-decoration: none;
+                color: var(--quaternary-color);
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
 
         section.context_writer {
@@ -169,11 +183,22 @@ main {
                     font-size: 25px;
                 }
                 header>h5 {
-                margin: 0;
-                margin-top: 5px;
-                font-size: 30px;
-                font-weight: bold;
+                    margin: 0;
+                    margin-top: 5px;
+                    font-size: 30px;
+                    font-weight: bold;
+                }
             }
+            &.post {
+                &>header {
+                    h1#post_title {
+                        wid
+                    }
+                    img {
+                        width: 100%;
+                    }
+                    width: 90%;
+                }
             }
         }
 
@@ -210,18 +235,6 @@ main {
                             }
                             transition: font-size 1s;
                         }
-                        #post_meta {
-                            font-family: var(--primary-font);
-                            color: var(--quaternary-color);
-                            font-size: 11px;
-                            a {
-                                text-decoration: none;
-                                color: var(--quaternary-color);
-                                &:hover {
-                                    text-decoration: underline;
-                                }
-                            }
-                        }
                     }
                     #post_excerpt {
                         font-family: var(--tertiary-font);
@@ -230,14 +243,6 @@ main {
                             display: none;
                         }
                     }
-                }
-            }
-        }
-
-        .context_writer.post {
-            &>header {
-                img {
-                    width: 100%;
                 }
             }
         }
@@ -275,7 +280,7 @@ main {
     }
 
     #sidebar {
-        padding: 0px 20px;
+        padding: 0px 20px 0px 30px;
         margin: 0px;
         text-align: initial;
 
